--- a/index.html
+++ b/index.html
@@ -30,16 +30,31 @@
   </header>
 
   <!-- HERO (2 images rotate) -->
-  <section class="hero">
-    <!-- Place these two images in /assets with these names -->
-    <!-- assets/hero1.jpg  | assets/hero2.jpg -->
-    <img id="hero-img" src="assets/hero1.jpg" alt="KARBA hero" />
-    <div class="hero__overlay">
-      <h1>Reliable Protection & Smart Planning</h1>
-      <p>Life • Family • Education • Business</p>
-      <a href="#consult" class="btn btn--gold">Book a Free Consultation</a>
-    </div>
-  </section>
+  <section class="container sections" id="services">
+  <h2>Our Services</h2>
+  <div class="cards">
+    <article class="card">
+      <h3>Life Insurance</h3>
+      <p>Affordable term or whole life cover to protect your loved ones and clear liabilities.</p>
+    </article>
+    <article class="card">
+      <h3>Family Protection Plans</h3>
+      <p>Income replacement and emergency cover so your family’s lifestyle is secure.</p>
+    </article>
+    <article class="card">
+      <h3>Children Education Plans</h3>
+      <p>Structured savings + protection to fund school fees and university costs.</p>
+    </article>
+    <article class="card">
+      <h3>Retirement &amp; Annuity</h3>
+      <p>Build a dependable retirement income with annuities and long-term options.</p>
+    </article>
+    <article class="card">
+      <h3>Business/Asset Protection</h3>
+      <p>Safeguard owners, key staff, and assets; ensure business continuity.</p>
+    </article>
+  </div>
+</section>
 
   <!-- TRUST / CERTIFICATES -->
   <section class="trust" id="trust">
