--- a/index.html
+++ b/index.html
@@ -182,5 +182,6 @@
   </div>
 
   <script src="script.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LfIGcsrAAAAADuBkckGWCye7tJ0HpgH0VJXqxZi"></script>
 </body>
 </html>
