--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
       <p>Build a dependable retirement income with annuities and long-term options.</p>
     </article>
     <article class="card">
-      <h3>Business/Asset Protection</h3>
-      <p>Safeguard owners, key staff, and assets; ensure business continuity.</p>
+      <h3>Real Estate Advisory</h3>
+      <p>Guilding you to secure land, homes, and properies with safe and trusted process.</p>
+    </article>
+     <article class="card">
+      <h3>Financial Consultancy</h3>
+      <p>Helping you plan insurance, invetments, and wealth strategies to build lasting value.</p>
     </article>
   </div>
 </section>
