--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- assets/hero1.jpg  | assets/hero2.jpg -->
     <img id="hero-img" src="assets/hero1.jpg" alt="KARBA hero" />
     <div class="hero__overlay">
-      <h1>Reliable Protection & Smart Planning</h1>
-      <p>Life • Family • Education • Business</p>
+        <h1>LIVE CONFIDENTLY. INVEST WISELY. LEAVE A LEGACY</h1>
+        <p>Life • Family • Education • Retirement • Real Estate</p>
       <a href="#consult" class="btn btn--gold">Book a Free Consultation</a>
     </div>
   </section>
