--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
       <div class="foot__copy">© 2025 KARBA. All rights reserved.</div>
       <div class="social">
         <!-- Update phone/handles as needed -->
-        <a class="social__link" target="_blank" rel="noopener" href="https://wa.me/2348090914569?text=Hello%20KARBA%2C%20I%27d%20like%20a%20consultation.">
+        <a class="social__link" target="_blank" rel="noopener" href="https://wa.me/2349162631205?text=Hello%20KARBA%2C%20I%27d%20like%20a%20consultation.">
           <!-- WhatsApp SVG -->
           <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M.057 24l1.687-6.163a11.867 11.867 0 01-1.62-6.03C.122 5.281 5.403 0 12.057 0c3.181 0 6.167 1.24 8.413 3.488a11.82 11.82 0 013.49 8.41c-.003 6.654-5.284 11.935-11.94 11.935a11.9 11.9 0 01-6.032-1.616L.057 24zm6.597-3.807c1.742 1.035 3.276 1.666 5.392 1.666 5.448 0 9.886-4.434 9.889-9.877.003-5.462-4.415-9.89-9.877-9.893-5.445 0-9.88 4.434-9.883 9.879 0 2.225.651 3.891 1.746 5.555l-.999 3.648 3.732-.978zm11.387-5.464c-.074-.124-.272-.198-.57-.346-.297-.149-1.758-.867-2.03-.966-.272-.099-.47-.149-.668.149-.198.297-.767.966-.94 1.164-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.521.149-.174.198-.298.298-.497.099-.198.05-.372-.025-.521-.074-.149-.668-1.61-.916-2.205-.242-.58-.487-.5-.668-.51l-.57-.01c-.198 0-.521.074-.793.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.71.306 1.263.489 1.694.626.712.227 1.36.195 1.871.118.571-.085 1.758-.718 2.006-1.411.248-.694.248-1.289.173-1.411z" fill="currentColor"/></svg>
           <span>WhatsApp</span>
         </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://www.linkedin.com/">
+        <a class="social__link" target="_blank" rel="noopener" href="https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/">
           <span>LinkedIn</span>
         </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://facebook.com/">
+        <a class="social__link" target="_blank" rel="noopener" href="https://facebook.com/profile.php?id=61579013108278/">
           <span>Facebook</span>
         </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://instagram.com/">
+        <a class="social__link" target="_blank" rel="noopener" href="https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/">
           <span>Instagram</span>
         </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://youtube.com/">
+        <a class="social__link" target="_blank" rel="noopener" href="https://youtube.com/@KarbaFinancialConsultant">
           <span>YouTube</span>
         </a>
         <a class="social__link" href="mailto:karbaconsultant@gmail.com">
