--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
       <h3>Retirement &amp; Annuity</h3>
       <p>Build a dependable retirement income with annuities and long-term options.</p>
     </article>
-    <article class="card">
-      <h3>Real Estate Advisory</h3>
-      <p>Guilding you to secure land, homes, and properies with safe and trusted process.</p>
-    </article>
      <article class="card">
       <h3>Financial Consultancy</h3>
       <p>Helping you plan insurance, invetments, and wealth strategies to build lasting value.</p>
@@ -97,7 +93,7 @@
   <!-- ABOUT (anchor only for nav) -->
   <section class="container sections" id="about">
     <h2>About KARBA</h2>
-    <p>We help families and businesses choose the right protection and savings plans, with honest advice and responsive support.</p>
+    <p>KARBA Financial Consultant Ltd is a licensed insurance firm incorporated under Nigerian law. With full certifications from CAC, CIIN, and NAICOM, we are committed to providing trusted financial solutions that help individuals and families secure their future.</p>
   </section>
 
   <!-- CONSULTATION FORM -->
