--- a/index.html
+++ b/index.html
@@ -97,7 +97,14 @@
   <!-- ABOUT (anchor only for nav) -->
   <section class="container sections" id="about">
     <h2>About KARBA</h2>
-    <p>KARBA Financial Consultant Ltd is a licensed insurance firm incorporated under Nigerian law. With full certifications from CAC, CIIN, and NAICOM, we are committed to providing trusted financial solutions that help individuals and families secure their future.</p>
+    <p>KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
+We serve as a trusted intermediary between individuals, families, businesses, and reputable institutions; helping clients make informed financial decisions that protect their future, grow their assets, and preserve their legacies.
+Founded with a passion for transparency, professionalism, and innovation, KARBA exists to simplify financial planning for everyday Nigerians. Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
+At KARBA, we believe that everyone deserves peace of mind and financial confidence. Whether it’s securing a child’s education, protecting family income, planning for retirement, or investing in real estate, we guide our clients every step of the way with clarity and care.
+We are duly registered with the Corporate Affairs Commission (CAC), compliant with SCUML, and operate under the regulatory supervision of NAICOM and CIIN for insurance advisory. Our real estate services are being formalized with LASRERA, ensuring compliance and professionalism across all operations.
+As a technology-driven firm, KARBA is developing the KARBA App; a digital platform designed to make financial and real estate advisory services more accessible. Through it, clients will be able to connect directly with licensed advisors, compare plans, manage policies, and access secure digital documentation; anytime, anywhere.
+Beyond business, KARBA is a growing ecosystem of trained financial advisors, empowering youths through mentorship, skill-building, and entrepreneurship. Our operations are guided by three core values; Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
+With integrity at our foundation and innovation as our compass, KARBA is on a mission to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.</p>
   </section>
 
   <!-- CONSULTATION FORM -->
