--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ With integrity at our foundation and innovation as our compass, KARBA is on a mi
         <a class="social__link" target="_blank" rel="noopener" href="https://youtube.com/@KarbaFinancialConsultant">
           <span>YouTube</span>
         </a>
-        <a class="social__link" href="mailto:karbaconsultant@gmail.com">
+        <a class="social__link" href="mailto:info@karbafinancialconsultant.com">
           <span>Email</span>
         </a>
       </div>
