--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KARBA Financial Consultant</title>
+  <title>KARBA FINANCIAL CONSULTANT LTD</title>
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="styles.css" />
@@ -19,7 +19,7 @@
       <a class="brand" href="/">
         <img src="assets/logo_48.png" alt="KARBA" class="brand__logo" />
         <strong class="brand__text">KARBA</strong>
-        <span class="brand__sub">Financial Consultant</span>
+        <span class="brand__sub">FINANCIAL CONSULTANT LTD</span>
       </a>
 
       <nav class="menu">
