--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- assets/hero1.jpg  | assets/hero2.jpg -->
     <img id="hero-img" src="assets/hero1.jpg" alt="KARBA hero" />
     <div class="hero__overlay">
-        <h1>LIVE CONFIDENTLY. INVEST WISELY. LEAVE A LEGACY</h1>
-        <p>Life • Family • Education • Retirement • Real Estate</p>
+           <h1>LIVE CONFIDENTLY. INVEST WISELY. LEAVE A LEGACY</h1>
+           <p>Life • Family • Education • Retirement • Real Estate Consultancy</p>
       <a href="#consult" class="btn btn--gold">Book a Free Consultation</a>
     </div>
   </section>
@@ -60,7 +60,6 @@
         <button class="btn btn--outline cert-trigger" data-img="assets/cert_ciin.png">View certificate</button>
       </div>
     </div>
-    <p class="trust__note">Certificates shown on request — click “View certificate”.</p>
   </section>
 
   <!-- SERVICES (anchor only for nav) -->
