--- a/index.html
+++ b/index.html
@@ -1,198 +1,138 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KARBA FINANCIAL CONSULTANT LTD</title>
-  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="styles.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>KARBA Financial Consultant Ltd</title>
 
-  <!-- Config FIRST, then reCAPTCHA, then app -->
-  <script src="config.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js?render=explicit"></script>
-</head>
-<body>
-  <!-- Top nav -->
-  <header class="nav">
-    <div class="container nav__inner">
-      <a class="brand" href="/">
-        <img src="assets/logo_48.png" alt="KARBA" class="brand__logo" />
-        <strong class="brand__text">KARBA</strong>
-        <span class="brand__sub">FINANCIAL CONSULTANT LTD</span>
-      </a>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/karba-logo-gold.png" />
 
-      <nav class="menu">
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#consult">Book Free Consultation</a>
-      </nav>
-    </div>
-  </header>
+    <!-- Fonts & Styles -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-  <!-- HERO (2 images rotate) -->
-  <section class="hero">
-    <!-- Place these two images in /assets with these names -->
-    <!-- assets/hero1.jpg  | assets/hero2.jpg -->
-    <img id="hero-img" src="assets/hero1.jpg" alt="KARBA hero" />
-    <div class="hero__overlay">
-           <h1>LIVE CONFIDENTLY. INVEST WISELY. LEAVE A LEGACY</h1>
-           <p>Life • Family • Education • Retirement • Real Estate Consultancy</p>
-      <a href="#consult" class="btn btn--gold">Book a Free Consultation</a>
-    </div>
-  </section>
+  <body id="top">
+    <!-- HEADER / NAVBAR -->
+    <header class="site-header">
+      <div class="container nav-container">
+        <div class="brand">
+          <img
+            src="assets/karba-logo-gold.png"
+            alt="KARBA Logo"
+            class="brand-logo"
+          />
+          <div class="brand-text">
+            <span class="brand-karba">KARBA</span>
+            <span class="brand-tagline">Financial Consultant Ltd</span>
+          </div>
+        </div>
 
-  <!-- TRUST / CERTIFICATES -->
-  <section class="trust" id="trust">
-    <div class="container trust__grid">
-      <!-- Put these PNGs in /assets with these names -->
-      <!-- cert_naicom.png | cert_cac.png | cert_ciin.png -->
-      <div class="trust__item">
-        <img src="assets/cert_naicom.png" alt="NAICOM" />
-        <button class="btn btn--outline cert-trigger" data-img="assets/cert_naicom.png">View certificate</button>
+        <nav class="main-nav">
+          <a href="#top">Home</a>
+          <a href="#services">Plans</a>
+          <a href="#services">Real Estate</a>
+          <a href="#about">About</a>
+          <a id="portalLoginBtn" class="btn btn-gold" href="#">Portal Login</a>
+        </nav>
       </div>
-      <div class="trust__item">
-        <img src="assets/cert_cac.png" alt="CAC" />
-        <button class="btn btn--outline cert-trigger" data-img="assets/cert_cac.png">View certificate</button>
+    </header>
+
+    <!-- HERO SECTION -->
+    <section class="hero">
+      <div class="container hero-inner">
+        <div class="hero-content">
+          <h1>
+            Live Confidently.<br />
+            Invest Wisely.<br />
+            Leave a Legacy.
+          </h1>
+          <p>
+            Your trusted partner for Insurance and Real Estate solutions.
+          </p>
+          <div class="hero-buttons">
+            <a href="#services" class="btn btn-gold">Explore Plans</a>
+            <a href="#services" class="btn btn-outline">View Real Estate Offers</a>
+          </div>
+        </div>
+
+        <!-- STATS rendered by JS -->
+        <div id="hero-stats" class="stats-grid" aria-label="KARBA Stats"></div>
       </div>
-      <div class="trust__item">
-        <img src="assets/cert_ciin.png" alt="CIIN" />
-        <button class="btn btn--outline cert-trigger" data-img="assets/cert_ciin.png">View certificate</button>
+    </section>
+
+    <!-- SERVICES -->
+    <section id="services" class="section">
+      <div class="container">
+        <h2>Our Services</h2>
+        <div class="cards">
+          <article class="card">
+            <h3>Life Insurance</h3>
+            <p>Comprehensive life and protection plans for peace of mind.</p>
+          </article>
+          <article class="card">
+            <h3>Family Protection Plans</h3>
+            <p>Safeguard your loved ones with tailored coverage options.</p>
+          </article>
+          <article class="card">
+            <h3>Children Education Plans</h3>
+            <p>Secure your children’s future education and university costs.</p>
+          </article>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- SERVICES (anchor only for nav) -->
-  <section class="container sections" id="services">
-  <h2>Our Services</h2>
-  <div class="cards">
-    <article class="card">
-      <h3>Life Insurance</h3>
-      <p>Affordable term or whole life cover to protect your loved ones and clear liabilities.</p>
-    </article>
-    <article class="card">
-      <h3>Family Protection Plans</h3>
-      <p>Income replacement and emergency cover so your family’s lifestyle is secure.</p>
-    </article>
-    <article class="card">
-      <h3>Children Education Plans</h3>
-      <p>Structured savings + protection to fund school fees and university costs.</p>
-    </article>
-    <article class="card">
-      <h3>Retirement &amp; Annuity</h3>
-      <p>Build a dependable retirement income with annuities and long-term options.</p>
-    </article>
-    <article class="card">
-      <h3>Real Estate Advisory</h3>
-      <p>Guilding you to secure land, homes, and properies with safe and trusted process.</p>
-    </article>
-     <article class="card">
-      <h3>Financial Consultancy</h3>
-      <p>Helping you plan insurance, invetments, and wealth strategies to build lasting value.</p>
-    </article>
-  </div>
-</section>
-
-  <!-- ABOUT (anchor only for nav) -->
-  <section class="container sections" id="about">
-    <h2>About KARBA</h2>
-    <p>KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
-We serve as a trusted intermediary between individuals, families, businesses, and reputable institutions; helping clients make informed financial decisions that protect their future, grow their assets, and preserve their legacies.
-Founded with a passion for transparency, professionalism, and innovation, KARBA exists to simplify financial planning for everyday Nigerians. Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
-At KARBA, we believe that everyone deserves peace of mind and financial confidence. Whether it’s securing a child’s education, protecting family income, planning for retirement, or investing in real estate, we guide our clients every step of the way with clarity and care.
-We are duly registered with the Corporate Affairs Commission (CAC), compliant with SCUML, and operate under the regulatory supervision of NAICOM and CIIN for insurance advisory. Our real estate services are being formalized with LASRERA, ensuring compliance and professionalism across all operations.
-As a technology-driven firm, KARBA is developing the KARBA App; a digital platform designed to make financial and real estate advisory services more accessible. Through it, clients will be able to connect directly with licensed advisors, compare plans, manage policies, and access secure digital documentation; anytime, anywhere.
-Beyond business, KARBA is a growing ecosystem of trained financial advisors, empowering youths through mentorship, skill-building, and entrepreneurship. Our operations are guided by three core values; Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
-With integrity at our foundation and innovation as our compass, KARBA is on a mission to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.</p>
-  </section>
-
-  <!-- CONSULTATION FORM -->
-  <section class="container sections" id="consult">
-    <h2>Book a Free Consultation</h2>
-    <p>Please fill your name, email, and service of interest.</p>
-    <div id="status" class="status">Checking API…</div>
-
-    <form id="lead-form" class="form">
-      <div class="grid">
-        <label>
-          Full name
-          <input id="name" name="name" type="text" placeholder="Your full name" required />
-        </label>
-
-        <label>
-          Email
-          <input id="email" name="email" type="email" placeholder="you@example.com" required />
-        </label>
-
-        <label>
-          Phone (optional)
-          <input id="phone" name="phone" type="tel" placeholder="080..." />
-        </label>
-
-        <label>
-          Service of interest
-          <select id="service" name="service" required>
-            <option>Life Insurance</option>
-            <option>Family Protection Plans</option>
-            <option>Children Education Plans</option>
-            <option>Retirement & Annuity</option>
-            <option>Business/Asset Protection</option>
-          </select>
-        </label>
-
-        <label class="grid--full">
-          Message (optional)
-          <textarea id="message" name="message" placeholder="How can we help?"></textarea>
-        </label>
+    <!-- ABOUT -->
+    <section id="about" class="section about">
+      <div class="container">
+        <h2>About KARBA</h2>
+        <p>
+          KARBA Financial Consultant Ltd is a highly regarded Nigerian firm
+          (RC: 8816957) offering Insurance, Financial, and Real Estate
+          Consultancy services. We connect individuals and institutions to
+          trusted solutions, helping clients make sound financial decisions that
+          protect their loved ones and grow wealth sustainably. Our mission is
+          anchored in transparency, professionalism, and value creation. We are
+          registered with the Corporate Affairs Commission (CAC), compliant with
+          SCUML and CIIN for Insurance Advisory, and aligned with Nigeria’s top
+          regulatory standards.
+        </p>
       </div>
+    </section>
 
-      <button id="submitBtn" class="btn btn--gold" type="submit">Submit</button>
-      <!-- reCAPTCHA badge lives here when loaded -->
-      <div id="recaptcha-container" class="visually-hidden"></div>
-    </form>
+    <!-- FOOTER -->
+    <footer id="footer">
+      <div class="container foot_inner">
+        <div class="foot_copy">© 2025 KARBA. All rights reserved.</div>
+        <nav id="socials" class="social_bar" aria-label="Social links"></nav>
+      </div>
+    </footer>
 
-  </section>
-
-  <!-- SOCIAL BAR -->
-  <footer class="foot">
-    <div class="container foot__inner">
-      <div class="foot__copy">© 2025 KARBA. All rights reserved.</div>
-      <div class="social">
-        <!-- Update phone/handles as needed -->
-        <a class="social__link" target="_blank" rel="noopener" href="https://wa.me/2349162631205?text=Hello%20KARBA%2C%20I%27d%20like%20a%20consultation.">
-          <!-- WhatsApp SVG -->
-          <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M.057 24l1.687-6.163a11.867 11.867 0 01-1.62-6.03C.122 5.281 5.403 0 12.057 0c3.181 0 6.167 1.24 8.413 3.488a11.82 11.82 0 013.49 8.41c-.003 6.654-5.284 11.935-11.94 11.935a11.9 11.9 0 01-6.032-1.616L.057 24zm6.597-3.807c1.742 1.035 3.276 1.666 5.392 1.666 5.448 0 9.886-4.434 9.889-9.877.003-5.462-4.415-9.89-9.877-9.893-5.445 0-9.88 4.434-9.883 9.879 0 2.225.651 3.891 1.746 5.555l-.999 3.648 3.732-.978zm11.387-5.464c-.074-.124-.272-.198-.57-.346-.297-.149-1.758-.867-2.03-.966-.272-.099-.47-.149-.668.149-.198.297-.767.966-.94 1.164-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.521.149-.174.198-.298.298-.497.099-.198.05-.372-.025-.521-.074-.149-.668-1.61-.916-2.205-.242-.58-.487-.5-.668-.51l-.57-.01c-.198 0-.521.074-.793.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.71.306 1.263.489 1.694.626.712.227 1.36.195 1.871.118.571-.085 1.758-.718 2.006-1.411.248-.694.248-1.289.173-1.411z" fill="currentColor"/></svg>
-          <span>WhatsApp</span>
-        </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/">
-          <span>LinkedIn</span>
-        </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://facebook.com/profile.php?id=61579013108278/">
-          <span>Facebook</span>
-        </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/">
-          <span>Instagram</span>
-        </a>
-        <a class="social__link" target="_blank" rel="noopener" href="https://youtube.com/@KarbaFinancialConsultant">
-          <span>YouTube</span>
-        </a>
-        <a class="social__link" href="mailto:info@karbafinancialconsultant.com">
-          <span>Email</span>
-        </a>
+    <!-- PORTAL MODAL -->
+    <div
+      id="portalModal"
+      class="modal hidden"
+      aria-hidden="true"
+      role="dialog"
+      aria-labelledby="portalModalTitle"
+    >
+      <div class="modal_backdrop"></div>
+      <div class="modal_card">
+        <h3 id="portalModalTitle"></h3>
+        <p id="portalModalBody" class="modal_body"></p>
+        <div id="portalModalActions" class="modal_actions"></div>
+        <button id="portalModalClose" class="btn btn-ghost" aria-label="Close">
+          Close
+        </button>
       </div>
     </div>
-  </footer>
 
-  <!-- Certificate modal -->
-  <div id="modal" class="modal" aria-hidden="true">
-    <div class="modal__backdrop" data-close></div>
-    <div class="modal__content">
-      <button class="modal__close" data-close>&times;</button>
-      <img id="modalImg" src="" alt="Certificate" />
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js?render=6LfIGcsrAAAAADuBkckGWCye7tJ0HpgH0VJXqxZi"></script>
-</body>
+    <!-- JS -->
+    <script type="module" src="config.js"></script>
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
