--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 <header class="header">
   <div class="container row">
     <div class="brand">
-      <div class="logo">K</div>
+      <img src="assets/karba-logo-gold.png" alt="KARBA" class="brand__logo" />
       <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
     </div>
     <nav>
+      <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
       <a href="#" onclick="show('landing')">Home</a>
       <a href="#plans" onclick="show('landing')">Plans</a>
       <a href="#realestate" onclick="show('landing')">Real Estate</a>
