--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 <header class="header">
   <div class="container row">
     <div class="brand">
-      <img src="assets/karba-logo-gold.png" alt="KARBA" class="brand__logo" />
+      <div class="logo">
+    <img src="assets/karba-logo-gold.png" alt="Karba Logo">
+</div>
       <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
     </div>
     <nav>
