Update title and logo display in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>KARBA Mockups v1 – Landing & Client Dashboard</title>
+<title>KARBA FINANCIAL CONSULTANT LTD</title>
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 <style>
   :root{
     --navy:#001F3F;
@@ -59,12 +60,14 @@
   <div class="container row">
     <div class="brand">
       <div class="logo">
-    <img src="assets/karba-logo-gold.png" alt="Karba Logo">
-</div>
-      <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
+        <img src="assets/karba-logo-gold.png" alt="Karba Logo" style="height: 40px; width: auto; vertical-align: middle;">
+      </div>
+      <div style="font-weight: 600; display: inline-block; margin-left: 10px;">
+        KARBA Financial Consultant Ltd
+      </div>
     </div>
+
     <nav>
-      <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
       <a href="#" onclick="show('landing')">Home</a>
       <a href="#plans" onclick="show('landing')">Plans</a>
       <a href="#realestate" onclick="show('landing')">Real Estate</a>
