--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 <header class="header">
   <div class="container row">
     <div class="brand">
-      <div class="logo">
-        <img src="assets/karba-logo-gold.png" alt="Karba Logo" style="height: 40px; width: auto; vertical-align: middle;">
-      </div>
-      <div style="font-weight: 600; display: inline-block; margin-left: 10px;">
-        KARBA Financial Consultant Ltd
-      </div>
+      <div class="logo" style="background: none; border: none; box-shadow: none; padding: 0; margin: 0; display: inline-flex; align-items: center;">
+  <img src="assets/karba-logo-gold.png" alt="Karba Logo" style="height: 40px; width: auto; vertical-align: middle; display: inline-block;">
+</div>
+<div style="font-weight: 600; display: inline-block; margin-left: 10px;">
+  KARBA Financial Consultant Ltd
+</div>
     </div>
 
     <nav>
@@ -96,8 +96,8 @@
       </div>
       <div class="card">
         <div class="grid grid-2">
-          <div class="card stat"><div class="lbl">Clients</div><div class="val">2,140+</div></div>
-          <div class="card stat"><div class="lbl">Partners</div><div class="val">20+</div></div>
+          <div class="card stat"><div class="lbl">Clients</div><div class="val">200+</div></div>
+          <div class="card stat"><div class="lbl">Partners</div><div class="val">10+</div></div>
           <div class="card stat"><div class="lbl">Plans</div><div class="val">Insurance & Real Estate</div></div>
           <div class="card stat"><div class="lbl">Support</div><div class="val">WhatsApp • Email</div></div>
         </div>
